# clang-tidy-automotive

clang-tidy/v20/: CMakeLists.txt
src/automotive/array/: AvoidFlexibleArrayMemberCheck.h
